He agregado el div restante para la ultima seccion de INDEX.HTML y tambien he agregado los dos primeros divs .racing .somos a un nuevo div llamado container para poder modificar el basicas.css y crear un efecto de Split enla pantalla

--- a/CSS/basicas.css
+++ b/CSS/basicas.css
@@ -96,3 +96,16 @@ footer a {
   font-weight: bold;
   transition: color 0.3s ease;
 }
+
+.container {
+  display: flex; /* Utilizamos flexbox */
+  height: 100vh; /* Hacemos que la altura sea del 100% del viewport */
+}
+
+.somos,
+.racing {
+  flex: 1;
+}
+
+.porque {
+}
