--- a/CSS/basicas.css
+++ b/CSS/basicas.css
@@ -8,21 +8,22 @@ los típicos selectores CSS de tipo. Por ejemplo, html, body, button, h1, etc */
 
 body {
   /* Direccion de la imagen  */
-  background-image: url(../Imagenes/f2.jpg);
+  background-image: url(../Imagenes/fondo.jpg);
 
   /* Ajustar la forma en que la imagen se muestra en el fondo */
-  background-size: cover;
+  background-size: 30%;
 
   /* Centrar la imagen en el fondo */
-  background-position: bottom;
+  background-position: inherit;
 
   /* Fijar la imagen para que no se desplace con el contenido */
   background-attachment: fixed;
 
   /* Establecer un color de fondo en caso de que la imagen no se cargue o no cubra toda la pantalla */
-  background-color: #7e7e7e;
+  background-color: black;
 
   text-align: center;
+  position: relative;
 }
 
 #titulo {
@@ -99,13 +100,22 @@ footer a {
 
 .container {
   display: flex; /* Utilizamos flexbox */
-  height: 100vh; /* Hacemos que la altura sea del 100% del viewport */
+  height: 70%; /* Hacemos que la altura sea del 100% del viewport */
+  border: 1px solid black;
 }
 
 .somos,
 .racing {
+  padding: 10px;
   flex: 1;
+  text-align: justify;
+  font-size: 17px;
 }
 
 .porque {
+  width: 75%;
+  display: inline-block;
+  text-align: justify;
+  padding: 10px;
+  font-size: 17px;
 }
