--- a/CSS/estados.css
+++ b/CSS/estados.css
@@ -57,3 +57,15 @@ nav a:hover {
   }
 }
 
+.porque,
+.somos,
+.racing {
+  filter: blur(5px);
+}
+
+.porque:hover,
+.somos:hover,
+.racing:hover {
+  color: #ffcc00; /* Cambiar el color al pasar el ratón sobre el enlace */
+  filter: blur(0px);
+}
