--- a/CSS/temas.css
+++ b/CSS/temas.css
@@ -1,1 +1,2 @@
-/* • Reglas de temas: estilos que afectan al layout y módulos. Estas reglas son opcionales, y las puedes utilizar para estilos que puede que quieras reemplazar (normalmente se utiliza en sitios web que cuentan con varios temas, por ejemplo, uno oscuro y uno claro). La implementación correcta de esta parte supone un punto extra (escala [0 – 10]) en la calificación en la calificación de la tarea. */
+/* • Reglas de temas: estilos que afectan al layout y módulos. Estas reglas son opcionales, y las puedes utilizar para estilos que puede que quieras reemplazar (normalmente se utiliza en sitios web que cuentan con varios temas, por ejemplo, uno oscuro y uno claro).
+
