--- a/CSS/basicas.css
+++ b/CSS/basicas.css
@@ -18,33 +18,6 @@ body {
   color: white;
 }
 
-/* Barra de navegacion */
-
-nav ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  margin-right: 20px;
-}
-
-/* H1 TITULO PRINCIPAL */
-#titulo {
-  margin-top: 15px;
-}
-
-/* HEADER */
-header {
-  color: #fff;
-  padding: 10px;
-  padding-top: 5px;
-  justify-content: center;
-  display: flex;
-}
-
 /* Carrusel */
 
 .carrusel-container {
@@ -62,7 +35,7 @@ header {
   transition: transform 30s ease; /* Animación de transición para el efecto */
   display: flex;
   text-align: center;
-  animation: carrusel-animation 25s infinite;
+  animation: carrusel-animation 20s infinite;
 }
 
 .contenidocarrusel {
@@ -80,8 +53,12 @@ h2 {
 
 .contenidocarrusel p {
   line-height: 1.6;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
   text-align: center;
+}
+
+.pcarrusel {
+  font-size: 20px;
 }
 
 /* EFECTOS DIVS */
@@ -127,22 +104,6 @@ div li {
 .porque,
 .somos {
   height: fit-content;
-}
-
-/* FOOTER */
-
-footer p {
-  font-size: 20px;
-  padding: 3px;
-  margin-top: 15px;
-  margin-bottom: 5px;
-}
-
-footer a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  transition: color 0.3s ease;
 }
 
 /* MAPA */
